overflow fixed

--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -9,11 +9,11 @@
 	justify-content: center;
 	align-items: center;
 	z-index: 99999;
-	transform: translateY(-100%);
+	transform: translateX(-100%);
 }
 
 .show-modal {
-	transform: translateY(0);
+	transform: translateX(0);
 }
 
 .modal-content {
